--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
     <h3 id="dyr">Mine kjæledyr</h3>
 
     <!-- Hvilken av disse kjæledyrene har du, eller har du lyst på å ha? -->
-    <img src="skilpadde.png" alt="Skilpadde">
-    <img src="kake.jpg" alt="Katt">
-    <img src="hamster.png" alt="Hamster">
-    <img src="gullfisk.png" alt="Gullfisk">
-    <img src="papegoye.png" alt="Papegøye">
-    <img src="kanin.png" alt="Kanin">
+<img src="https://www.gat.no/polopoly_fs/1.940499.1395437605!/image/1738943660.jpg_gen/derivatives/facelift_980/1738943660.jpg" alt="Skilpadde">
+<img src="kake.jpg" alt="Katt">
+<img src="hamster.png" alt="Hamster">
+<img src="gullfisk.png" alt="Gullfisk">
+<img src="papegoye.png" alt="Papegøye">
+<img src="kanin.png" alt="Kanin">
 
 
 
