--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
     h1 {
       color:blue;
-      background-color: white;
+      background-color: lightblue;
       font-family: showcard gothic;
     }
     </style>
