--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <style>
     h1 {
       color:blue;
-      background-color: lightblue;
+      background-color: white;
       font-family: showcard gothic;
+    }
+    body {
+      background-color: lightblue
     }
     </style>
 
