--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
     h1 {
       color:blue;
-      background-color: lightblue;
+      background-color: #C6FBFE;
       font-family: showcard gothic;
     }
     body {
-      background-color: lightblue
+      background-color: #C6FBFE
     }
     </style>
 
