--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
     h1 {
       color:blue;
-      background-color: #C6FBFE;
+      background-color: #C6EDFE;
       font-family: showcard gothic;
     }
     body {
-      background-color: #C6FBFE
+      background-color: #C6EDFE
     }
     </style>
 
