--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     </ul>
 
 
-    <p>Jeg går å friidrett, speider, fiolin og programering.</p>
+    <p>Jeg går å friidrett, speider, fiolin og programering.
+    På friidrett liker jeg best kort mellomdistanse og lang sprint. Jeg liker også å løpe hekk og hoppe tresteg.</p>
 
     <hr>
 
