--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <hr>
 
-    <h3 id="dyr">Mine kjæledyr</h3>
+    <h3 id="dyr">Bilder av ting jeg liker</h3>
 
     <!-- Hvilken av disse kjæledyrene har du, eller har du lyst på å ha? -->
 <img src="" alt="Skilpadde">
