--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <p>Jeg går å friidrett, speider, fiolin og programering.
     På friidrett liker jeg best kort mellomdistanse og lang sprint. Jeg liker også å løpe hekk og hoppe tresteg.</p>
 
+    <h3 id="mat">Min favoritt-mat</h3>
+
     <hr>
 
     <h3 id="mat">Min favoritt-mat</h3>
