--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <hr>
 
     <!-- Ta en kikk på disse linkene. Hvor fører de hen? -->
-    <h2><a href="#liker">Ting jeg liker</a>, <a href="#mat">mat</a> og <a href="#dyr">Bilder av ting jeg liker</a></h2>
+    <h2><a href="#liker">Ting jeg liker</a>, <a href="#mat">mat</a> og <a href="#dyr">Bilder av ting jeg like</a></h2>
 
     <hr>
 
